syntax.output
Terminals which are not used

   EXTERNAL
   DOLLAR
   SEMICOLON
   QUOTES


Grammar

    0 $accept: Stmt $end

    1 Stmt: Definitions

    2 Definitions: Definition Definitions
    3            | Definition

    4 Definition: Function
    5           | INCLUDE STRING_EXPR
    6           | TYPEDEF TAG EQUALS ArrowType
    7           | TYPEDEF TAG
    8           | STATIC VarDeclaration EQUALS Expr
    9           | DATATYPE ArrowType AS TAG OPEN VarDeclarations CLOSE Expr WITH OPEN FunctionList CLOSE

   10 Function: FUNCTION TAG OPEN VarDeclarations CLOSE COLON ArrowType EQUALS Expr
   11         | PROTOTYPE TAG OPEN VarDeclarations CLOSE COLON ArrowType

   12 FunctionList: Function FunctionList
   13             | Function

   14 ArrowType: PointerType ARROW ArrowType
   15          | OPEN ArgTypeList CLOSE ARROW ArrowType
   16          | OPEN CLOSE ARROW ArrowType
   17          | PointerType

   18 PointerType: TIMES ArrayType
   19            | TIMES SimpleType OPEN_S_BRACKET CLOSE_S_BRACKET
   20            | BOX SimpleType OPEN_S_BRACKET CLOSE_S_BRACKET
   21            | BOX ArrayType
   22            | ArrayType

   23 ArrayType: SimpleType OPEN_S_BRACKET INTEGER_EXPR CLOSE_S_BRACKET
   24          | SimpleType

   25 SimpleType: BYTE
   26           | INT
   27           | LONG
   28           | DOUBLE
   29           | BOOLEAN
   30           | OPEN_BRACKET VarDeclarationList CLOSE_BRACKET
   31           | UNION OPEN_BRACKET UnionDeclarationList CLOSE_BRACKET
   32           | TIMES QUESTION_MARK
   33           | QUESTION_MARK QUESTION_MARK
   34           | DYNAMIC
   35           | CHARS
   36           | TAG
   37           | OPEN ArrowType CLOSE

   38 ArgTypeList: PointerType COMMA ArgTypeList
   39            | PointerType COMMA PointerType

   40 VarDeclarations: VarDeclarationList
   41                | /* empty */

   42 VarDeclarationList: VarDeclaration COMMA VarDeclarationList
   43                   | VarDeclaration

   44 VarDeclaration: TAG COLON ArrowType
   45               | TAG

   46 UnionDeclarationList: UnionDeclaration PIPE UnionDeclarationList
   47                     | UnionDeclaration

   48 UnionDeclaration: TAG ArrowType
   49                 | TAG

   50 Expr: ExpOp ASSIGN Expr
   51     | ExpOp COLON ArrowType
   52     | ExpOp IS ArrowType
   53     | LET VarDeclaration EQUALS Expr IN Expr
   54     | STATIC VarDeclaration EQUALS Expr IN Expr
   55     | IF Expr THEN Expr ELSE Expr
   56     | CASE Expr OF OPEN CaseList CLOSE
   57     | FOR VarDeclaration EQUALS Expr COMMA Expr COMMA Expr IN Expr
   58     | FOREACH VarDeclaration FROM Expr IN Expr
   59     | WHILE Expr IN Expr
   60     | ExpOp

   61 ExpOp: ExpOp AND ExpOp
   62      | ExpOp OR ExpOp
   63      | ExpOp LTE ExpOp
   64      | ExpOp GTE ExpOp
   65      | ExpOp LT ExpOp
   66      | ExpOp GT ExpOp
   67      | ExpOp EQ ExpOp
   68      | ExpOp PLUS ExpOp
   69      | ExpOp MINUS ExpOp
   70      | ExpOp TIMES ExpOp
   71      | ExpOp DIVIDE ExpOp
   72      | Access

   73 Access: Value AccessPathList
   74       | Value

   75 AccessPathList: AccessPath AccessPathList
   76               | AccessPath

   77 AccessPath: DOT TAG
   78           | ARROW TAG
   79           | DOUBLE_ARROW TAG
   80           | OPEN_S_BRACKET Expr CLOSE_S_BRACKET
   81           | ARROW OPEN_S_BRACKET Expr CLOSE_S_BRACKET
   82           | DOUBLE_ARROW OPEN_S_BRACKET Expr CLOSE_S_BRACKET

   83 Value: NOT Value
   84      | PLUS Value
   85      | MINUS Value
   86      | TIMES Value
   87      | AMPERSAND Value
   88      | CARDINAL Value
   89      | BOX Value
   90      | UNBOX Value
   91      | DOUBLE_EXPR
   92      | INTEGER_EXPR
   93      | STRING_EXPR
   94      | BOX WITH Expr OF OPEN TAG IN Expr CLOSE
   95      | ARRAY WITH Expr OF OPEN TAG IN Expr CLOSE
   96      | OPEN_S_BRACKET INTEGER_EXPR OF TAG IN Expr CLOSE_S_BRACKET
   97      | NEW ArrowType OPEN Arguments CLOSE
   98      | OPEN_BRACKET VarDeclarationList APPLY Expr CLOSE_BRACKET
   99      | OPEN_S_BRACKET Arguments CLOSE_S_BRACKET
  100      | TAG OPEN_BRACKET MapsList CLOSE_BRACKET
  101      | TAG DOUBLE_COLON TAG OPEN_BRACKET Expr CLOSE_BRACKET
  102      | TAG DOUBLE_COLON TAG OPEN_BRACKET OPEN_BRACKET MapsList CLOSE_BRACKET CLOSE_BRACKET
  103      | TAG DOUBLE_COLON TAG
  104      | TAG_OR_EMPTY OPEN Arguments CLOSE
  105      | TAG

  106 TAG_OR_EMPTY: TAG
  107             | /* empty */

  108 Arguments: ArgList
  109          | /* empty */

  110 ArgList: Expr COMMA ArgList
  111        | Expr

  112 Mapping: VarDeclaration EQUALS Expr

  113 MapsList: Mapping COMMA MapsList
  114         | Mapping

  115 Case: TAG VarDeclaration IN Expr
  116     | TAG IN Expr
  117     | OTHERWISE IN Expr

  118 CaseList: Case PIPE CaseList
  119         | Case

  120 DOUBLE_EXPR: DOUBLE_VALUE

  121 INTEGER_EXPR: INTEGER

  122 STRING_EXPR: STRING


Terminals, with rules where they appear

$end (0) 0
error (256)
DOUBLE_VALUE (258) 120
INTEGER (259) 121
TAG (260) 6 7 9 10 11 36 44 45 48 49 77 78 79 94 95 96 100 101 102
    103 105 106 115 116
STRING (261) 122
PLUS (262) 68 84
MINUS (263) 69 85
TIMES (264) 18 19 32 70 86
DIVIDE (265) 71
OPEN (266) 9 10 11 15 16 37 56 94 95 97 104
CLOSE (267) 9 10 11 15 16 37 56 94 95 97 104
COLON (268) 10 11 44 51
ASSIGN (269) 50
EQUALS (270) 6 8 10 53 54 57 112
OPEN_S_BRACKET (271) 19 20 23 80 81 82 96 99
CLOSE_S_BRACKET (272) 19 20 23 80 81 82 96 99
OPEN_BRACKET (273) 30 31 98 100 101 102
CLOSE_BRACKET (274) 30 31 98 100 101 102
INCLUDE (275) 5
DATATYPE (276) 9
WITH (277) 9 94 95
FUNCTION (278) 10
PROTOTYPE (279) 11
EXTERNAL (280)
ARROW (281) 14 15 16 78 81
DOUBLE_ARROW (282) 79 82
BYTE (283) 25
INT (284) 26
LONG (285) 27
DOUBLE (286) 28
CHARS (287) 35
BOOLEAN (288) 29
ARRAY (289) 95
BOX (290) 20 21 89 94
UNBOX (291) 90
OF (292) 56 94 95 96
DYNAMIC (293) 34
APPLY (294) 98
IN (295) 53 54 57 58 59 94 95 96 115 116 117
LET (296) 53
FOR (297) 57
FOREACH (298) 58
FROM (299) 58
WHILE (300) 59
IF (301) 55
THEN (302) 55
ELSE (303) 55
CARDINAL (304) 88
DOLLAR (305)
NEW (306) 97
TYPEDEF (307) 6 7
COMMA (308) 38 39 42 57 110 113
AMPERSAND (309) 87
AND (310) 61
OR (311) 62
LTE (312) 63
GTE (313) 64
LT (314) 65
GT (315) 66
EQ (316) 67
NOT (317) 83
DOT (318) 77
IS (319) 52
STATIC (320) 8 54
AS (321) 9
QUESTION_MARK (322) 32 33
SEMICOLON (323)
QUOTES (324)
UNION (325) 31
CASE (326) 56
PIPE (327) 46 118
DOUBLE_COLON (328) 101 102 103
OTHERWISE (329) 117


Nonterminals, with rules where they appear

$accept (75)
    on left: 0
Stmt (76)
    on left: 1, on right: 0
Definitions (77)
    on left: 2 3, on right: 1 2
Definition (78)
    on left: 4 5 6 7 8 9, on right: 2 3
Function (79)
    on left: 10 11, on right: 4 12 13
FunctionList (80)
    on left: 12 13, on right: 9 12
ArrowType (81)
    on left: 14 15 16 17, on right: 6 9 10 11 14 15 16 37 44 48 51
    52 97
PointerType (82)
    on left: 18 19 20 21 22, on right: 14 17 38 39
ArrayType (83)
    on left: 23 24, on right: 18 21 22
SimpleType (84)
    on left: 25 26 27 28 29 30 31 32 33 34 35 36 37,
    on right: 19 20 23 24
ArgTypeList (85)
    on left: 38 39, on right: 15 38
VarDeclarations (86)
    on left: 40 41, on right: 9 10 11
VarDeclarationList (87)
    on left: 42 43, on right: 30 40 42 98
VarDeclaration (88)
    on left: 44 45, on right: 8 42 43 53 54 57 58 112 115
UnionDeclarationList (89)
    on left: 46 47, on right: 31 46
UnionDeclaration (90)
    on left: 48 49, on right: 46 47
Expr (91)
    on left: 50 51 52 53 54 55 56 57 58 59 60, on right: 8 9 10 50
    53 54 55 56 57 58 59 80 81 82 94 95 96 98 101 110 111 112 115 116
    117
ExpOp (92)
    on left: 61 62 63 64 65 66 67 68 69 70 71 72, on right: 50 51 52
    60 61 62 63 64 65 66 67 68 69 70 71
Access (93)
    on left: 73 74, on right: 72
AccessPathList (94)
    on left: 75 76, on right: 73 75
AccessPath (95)
    on left: 77 78 79 80 81 82, on right: 75 76
Value (96)
    on left: 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100
    101 102 103 104 105, on right: 73 74 83 84 85 86 87 88 89 90
TAG_OR_EMPTY (97)
    on left: 106 107, on right: 104
Arguments (98)
    on left: 108 109, on right: 97 99 104
ArgList (99)
    on left: 110 111, on right: 108 110
Mapping (100)
    on left: 112, on right: 113 114
MapsList (101)
    on left: 113 114, on right: 100 102 113
Case (102)
    on left: 115 116 117, on right: 118 119
CaseList (103)
    on left: 118 119, on right: 56 118
DOUBLE_EXPR (104)
    on left: 120, on right: 91
INTEGER_EXPR (105)
    on left: 121, on right: 23 92 96
STRING_EXPR (106)
    on left: 122, on right: 5 93


state 0

    0 $accept: . Stmt $end

    INCLUDE    shift, and go to state 1
    DATATYPE   shift, and go to state 2
    FUNCTION   shift, and go to state 3
    PROTOTYPE  shift, and go to state 4
    TYPEDEF    shift, and go to state 5
    STATIC     shift, and go to state 6

    Stmt         go to state 7
    Definitions  go to state 8
    Definition   go to state 9
    Function     go to state 10


state 1

    5 Definition: INCLUDE . STRING_EXPR

    STRING  shift, and go to state 11

    STRING_EXPR  go to state 12


state 2

    9 Definition: DATATYPE . ArrowType AS TAG OPEN VarDeclarations CLOSE Expr WITH OPEN FunctionList CLOSE

    TAG            shift, and go to state 13
    TIMES          shift, and go to state 14
    OPEN           shift, and go to state 15
    OPEN_BRACKET   shift, and go to state 16
    BYTE           shift, and go to state 17
    INT            shift, and go to state 18
    LONG           shift, and go to state 19
    DOUBLE         shift, and go to state 20
    CHARS          shift, and go to state 21
    BOOLEAN        shift, and go to state 22
    BOX            shift, and go to state 23
    DYNAMIC        shift, and go to state 24
    QUESTION_MARK  shift, and go to state 25
    UNION          shift, and go to state 26

    ArrowType    go to state 27
    PointerType  go to state 28
    ArrayType    go to state 29
    SimpleType   go to state 30


state 3

   10 Function: FUNCTION . TAG OPEN VarDeclarations CLOSE COLON ArrowType EQUALS Expr

    TAG  shift, and go to state 31


state 4

   11 Function: PROTOTYPE . TAG OPEN VarDeclarations CLOSE COLON ArrowType

    TAG  shift, and go to state 32


state 5

    6 Definition: TYPEDEF . TAG EQUALS ArrowType
    7           | TYPEDEF . TAG

    TAG  shift, and go to state 33


state 6

    8 Definition: STATIC . VarDeclaration EQUALS Expr

    TAG  shift, and go to state 34

    VarDeclaration  go to state 35


state 7

    0 $accept: Stmt . $end

    $end  shift, and go to state 36


state 8

    1 Stmt: Definitions .

    $default  reduce using rule 1 (Stmt)


state 9

    2 Definitions: Definition . Definitions
    3            | Definition .

    INCLUDE    shift, and go to state 1
    DATATYPE   shift, and go to state 2
    FUNCTION   shift, and go to state 3
    PROTOTYPE  shift, and go to state 4
    TYPEDEF    shift, and go to state 5
    STATIC     shift, and go to state 6

    $default  reduce using rule 3 (Definitions)

    Definitions  go to state 37
    Definition   go to state 9
    Function     go to state 10


state 10

    4 Definition: Function .

    $default  reduce using rule 4 (Definition)


state 11

  122 STRING_EXPR: STRING .

    $default  reduce using rule 122 (STRING_EXPR)


state 12

    5 Definition: INCLUDE STRING_EXPR .

    $default  reduce using rule 5 (Definition)


state 13

   36 SimpleType: TAG .

    $default  reduce using rule 36 (SimpleType)


state 14

   18 PointerType: TIMES . ArrayType
   19            | TIMES . SimpleType OPEN_S_BRACKET CLOSE_S_BRACKET
   32 SimpleType: TIMES . QUESTION_MARK

    TAG            shift, and go to state 13
    TIMES          shift, and go to state 38
    OPEN           shift, and go to state 39
    OPEN_BRACKET   shift, and go to state 16
    BYTE           shift, and go to state 17
    INT            shift, and go to state 18
    LONG           shift, and go to state 19
    DOUBLE         shift, and go to state 20
    CHARS          shift, and go to state 21
    BOOLEAN        shift, and go to state 22
    DYNAMIC        shift, and go to state 24
    QUESTION_MARK  shift, and go to state 40
    UNION          shift, and go to state 26

    ArrayType   go to state 41
    SimpleType  go to state 42


state 15

   15 ArrowType: OPEN . ArgTypeList CLOSE ARROW ArrowType
   16          | OPEN . CLOSE ARROW ArrowType
   37 SimpleType: OPEN . ArrowType CLOSE

    TAG            shift, and go to state 13
    TIMES          shift, and go to state 14
    OPEN           shift, and go to state 15
    CLOSE          shift, and go to state 43
    OPEN_BRACKET   shift, and go to state 16
    BYTE           shift, and go to state 17
    INT            shift, and go to state 18
    LONG           shift, and go to state 19
    DOUBLE         shift, and go to state 20
    CHARS          shift, and go to state 21
    BOOLEAN        shift, and go to state 22
    BOX            shift, and go to state 23
    DYNAMIC        shift, and go to state 24
    QUESTION_MARK  shift, and go to state 25
    UNION          shift, and go to state 26

    ArrowType    go to state 44
    PointerType  go to state 45
    ArrayType    go to state 29
    SimpleType   go to state 30
    ArgTypeList  go to state 46


state 16

   30 SimpleType: OPEN_BRACKET . VarDeclarationList CLOSE_BRACKET

    TAG  shift, and go to state 34

    VarDeclarationList  go to state 47
    VarDeclaration      go to state 48


state 17

   25 SimpleType: BYTE .

    $default  reduce using rule 25 (SimpleType)


state 18

   26 SimpleType: INT .

    $default  reduce using rule 26 (SimpleType)


state 19

   27 SimpleType: LONG .

    $default  reduce using rule 27 (SimpleType)


state 20

   28 SimpleType: DOUBLE .

    $default  reduce using rule 28 (SimpleType)


state 21

   35 SimpleType: CHARS .

    $default  reduce using rule 35 (SimpleType)


state 22

   29 SimpleType: BOOLEAN .

    $default  reduce using rule 29 (SimpleType)


state 23

   20 PointerType: BOX . SimpleType OPEN_S_BRACKET CLOSE_S_BRACKET
   21            | BOX . ArrayType

    TAG            shift, and go to state 13
    TIMES          shift, and go to state 38
    OPEN           shift, and go to state 39
    OPEN_BRACKET   shift, and go to state 16
    BYTE           shift, and go to state 17
    INT            shift, and go to state 18
    LONG           shift, and go to state 19
    DOUBLE         shift, and go to state 20
    CHARS          shift, and go to state 21
    BOOLEAN        shift, and go to state 22
    DYNAMIC        shift, and go to state 24
    QUESTION_MARK  shift, and go to state 25
    UNION          shift, and go to state 26

    ArrayType   go to state 49
    SimpleType  go to state 50


state 24

   34 SimpleType: DYNAMIC .

    $default  reduce using rule 34 (SimpleType)


state 25

   33 SimpleType: QUESTION_MARK . QUESTION_MARK

    QUESTION_MARK  shift, and go to state 51


state 26

   31 SimpleType: UNION . OPEN_BRACKET UnionDeclarationList CLOSE_BRACKET

    OPEN_BRACKET  shift, and go to state 52


state 27

    9 Definition: DATATYPE ArrowType . AS TAG OPEN VarDeclarations CLOSE Expr WITH OPEN FunctionList CLOSE

    AS  shift, and go to state 53


state 28

   14 ArrowType: PointerType . ARROW ArrowType
   17          | PointerType .

    ARROW  shift, and go to state 54

    $default  reduce using rule 17 (ArrowType)


state 29

   22 PointerType: ArrayType .

    $default  reduce using rule 22 (PointerType)


state 30

   23 ArrayType: SimpleType . OPEN_S_BRACKET INTEGER_EXPR CLOSE_S_BRACKET
   24          | SimpleType .

    OPEN_S_BRACKET  shift, and go to state 55

    $default  reduce using rule 24 (ArrayType)


state 31

   10 Function: FUNCTION TAG . OPEN VarDeclarations CLOSE COLON ArrowType EQUALS Expr

    OPEN  shift, and go to state 56


state 32

   11 Function: PROTOTYPE TAG . OPEN VarDeclarations CLOSE COLON ArrowType

    OPEN  shift, and go to state 57


state 33

    6 Definition: TYPEDEF TAG . EQUALS ArrowType
    7           | TYPEDEF TAG .

    EQUALS  shift, and go to state 58

    $default  reduce using rule 7 (Definition)


state 34

   44 VarDeclaration: TAG . COLON ArrowType
   45               | TAG .

    COLON  shift, and go to state 59

    $default  reduce using rule 45 (VarDeclaration)


state 35

    8 Definition: STATIC VarDeclaration . EQUALS Expr

    EQUALS  shift, and go to state 60


state 36

    0 $accept: Stmt $end .

    $default  accept


state 37

    2 Definitions: Definition Definitions .

    $default  reduce using rule 2 (Definitions)


state 38

   32 SimpleType: TIMES . QUESTION_MARK

    QUESTION_MARK  shift, and go to state 61


state 39

   37 SimpleType: OPEN . ArrowType CLOSE

    TAG            shift, and go to state 13
    TIMES          shift, and go to state 14
    OPEN           shift, and go to state 15
    OPEN_BRACKET   shift, and go to state 16
    BYTE           shift, and go to state 17
    INT            shift, and go to state 18
    LONG           shift, and go to state 19
    DOUBLE         shift, and go to state 20
    CHARS          shift, and go to state 21
    BOOLEAN        shift, and go to state 22
    BOX            shift, and go to state 23
    DYNAMIC        shift, and go to state 24
    QUESTION_MARK  shift, and go to state 25
    UNION          shift, and go to state 26

    ArrowType    go to state 44
    PointerType  go to state 28
    ArrayType    go to state 29
    SimpleType   go to state 30


state 40

   32 SimpleType: TIMES QUESTION_MARK .
   33           | QUESTION_MARK . QUESTION_MARK

    QUESTION_MARK  shift, and go to state 51

    $default  reduce using rule 32 (SimpleType)


state 41

   18 PointerType: TIMES ArrayType .

    $default  reduce using rule 18 (PointerType)


state 42

   19 PointerType: TIMES SimpleType . OPEN_S_BRACKET CLOSE_S_BRACKET
   23 ArrayType: SimpleType . OPEN_S_BRACKET INTEGER_EXPR CLOSE_S_BRACKET
   24          | SimpleType .

    OPEN_S_BRACKET  shift, and go to state 62

    $default  reduce using rule 24 (ArrayType)


state 43

   16 ArrowType: OPEN CLOSE . ARROW ArrowType

    ARROW  shift, and go to state 63


state 44

   37 SimpleType: OPEN ArrowType . CLOSE

    CLOSE  shift, and go to state 64


state 45

   14 ArrowType: PointerType . ARROW ArrowType
   17          | PointerType .
   38 ArgTypeList: PointerType . COMMA ArgTypeList
   39            | PointerType . COMMA PointerType

    ARROW  shift, and go to state 54
    COMMA  shift, and go to state 65

    $default  reduce using rule 17 (ArrowType)


state 46

   15 ArrowType: OPEN ArgTypeList . CLOSE ARROW ArrowType

    CLOSE  shift, and go to state 66


state 47

   30 SimpleType: OPEN_BRACKET VarDeclarationList . CLOSE_BRACKET

    CLOSE_BRACKET  shift, and go to state 67


state 48

   42 VarDeclarationList: VarDeclaration . COMMA VarDeclarationList
   43                   | VarDeclaration .

    COMMA  shift, and go to state 68

    $default  reduce using rule 43 (VarDeclarationList)


state 49

   21 PointerType: BOX ArrayType .

    $default  reduce using rule 21 (PointerType)


state 50

   20 PointerType: BOX SimpleType . OPEN_S_BRACKET CLOSE_S_BRACKET
   23 ArrayType: SimpleType . OPEN_S_BRACKET INTEGER_EXPR CLOSE_S_BRACKET
   24          | SimpleType .

    OPEN_S_BRACKET  shift, and go to state 69

    $default  reduce using rule 24 (ArrayType)


state 51

   33 SimpleType: QUESTION_MARK QUESTION_MARK .

    $default  reduce using rule 33 (SimpleType)


state 52

   31 SimpleType: UNION OPEN_BRACKET . UnionDeclarationList CLOSE_BRACKET

    TAG  shift, and go to state 70

    UnionDeclarationList  go to state 71
    UnionDeclaration      go to state 72


state 53

    9 Definition: DATATYPE ArrowType AS . TAG OPEN VarDeclarations CLOSE Expr WITH OPEN FunctionList CLOSE

    TAG  shift, and go to state 73


state 54

   14 ArrowType: PointerType ARROW . ArrowType

    TAG            shift, and go to state 13
    TIMES          shift, and go to state 14
    OPEN           shift, and go to state 15
    OPEN_BRACKET   shift, and go to state 16
    BYTE           shift, and go to state 17
    INT            shift, and go to state 18
    LONG           shift, and go to state 19
    DOUBLE         shift, and go to state 20
    CHARS          shift, and go to state 21
    BOOLEAN        shift, and go to state 22
    BOX            shift, and go to state 23
    DYNAMIC        shift, and go to state 24
    QUESTION_MARK  shift, and go to state 25
    UNION          shift, and go to state 26

    ArrowType    go to state 74
    PointerType  go to state 28
    ArrayType    go to state 29
    SimpleType   go to state 30


state 55

   23 ArrayType: SimpleType OPEN_S_BRACKET . INTEGER_EXPR CLOSE_S_BRACKET

    INTEGER  shift, and go to state 75

    INTEGER_EXPR  go to state 76


state 56

   10 Function: FUNCTION TAG OPEN . VarDeclarations CLOSE COLON ArrowType EQUALS Expr

    TAG  shift, and go to state 34

    $default  reduce using rule 41 (VarDeclarations)

    VarDeclarations     go to state 77
    VarDeclarationList  go to state 78
    VarDeclaration      go to state 48


state 57

   11 Function: PROTOTYPE TAG OPEN . VarDeclarations CLOSE COLON ArrowType

    TAG  shift, and go to state 34

    $default  reduce using rule 41 (VarDeclarations)

    VarDeclarations     go to state 79
    VarDeclarationList  go to state 78
    VarDeclaration      go to state 48


state 58

    6 Definition: TYPEDEF TAG EQUALS . ArrowType

    TAG            shift, and go to state 13
    TIMES          shift, and go to state 14
    OPEN           shift, and go to state 15
    OPEN_BRACKET   shift, and go to state 16
    BYTE           shift, and go to state 17
    INT            shift, and go to state 18
    LONG           shift, and go to state 19
    DOUBLE         shift, and go to state 20
    CHARS          shift, and go to state 21
    BOOLEAN        shift, and go to state 22
    BOX            shift, and go to state 23
    DYNAMIC        shift, and go to state 24
    QUESTION_MARK  shift, and go to state 25
    UNION          shift, and go to state 26

    ArrowType    go to state 80
    PointerType  go to state 28
    ArrayType    go to state 29
    SimpleType   go to state 30


state 59

   44 VarDeclaration: TAG COLON . ArrowType

    TAG            shift, and go to state 13
    TIMES          shift, and go to state 14
    OPEN           shift, and go to state 15
    OPEN_BRACKET   shift, and go to state 16
    BYTE           shift, and go to state 17
    INT            shift, and go to state 18
    LONG           shift, and go to state 19
    DOUBLE         shift, and go to state 20
    CHARS          shift, and go to state 21
    BOOLEAN        shift, and go to state 22
    BOX            shift, and go to state 23
    DYNAMIC        shift, and go to state 24
    QUESTION_MARK  shift, and go to state 25
    UNION          shift, and go to state 26

    ArrowType    go to state 81
    PointerType  go to state 28
    ArrayType    go to state 29
    SimpleType   go to state 30


state 60

    8 Definition: STATIC VarDeclaration EQUALS . Expr

    DOUBLE_VALUE    shift, and go to state 82
    INTEGER         shift, and go to state 75
    TAG             shift, and go to state 83
    STRING          shift, and go to state 11
    PLUS            shift, and go to state 84
    MINUS           shift, and go to state 85
    TIMES           shift, and go to state 86
    OPEN_S_BRACKET  shift, and go to state 87
    OPEN_BRACKET    shift, and go to state 88
    ARRAY           shift, and go to state 89
    BOX             shift, and go to state 90
    UNBOX           shift, and go to state 91
    LET             shift, and go to state 92
    FOR             shift, and go to state 93
    FOREACH         shift, and go to state 94
    WHILE           shift, and go to state 95
    IF              shift, and go to state 96
    CARDINAL        shift, and go to state 97
    NEW             shift, and go to state 98
    AMPERSAND       shift, and go to state 99
    NOT             shift, and go to state 100
    STATIC          shift, and go to state 101
    CASE            shift, and go to state 102

    $default  reduce using rule 107 (TAG_OR_EMPTY)

    Expr          go to state 103
    ExpOp         go to state 104
    Access        go to state 105
    Value         go to state 106
    TAG_OR_EMPTY  go to state 107
    DOUBLE_EXPR   go to state 108
    INTEGER_EXPR  go to state 109
    STRING_EXPR   go to state 110


state 61

   32 SimpleType: TIMES QUESTION_MARK .

    $default  reduce using rule 32 (SimpleType)


state 62

   19 PointerType: TIMES SimpleType OPEN_S_BRACKET . CLOSE_S_BRACKET
   23 ArrayType: SimpleType OPEN_S_BRACKET . INTEGER_EXPR CLOSE_S_BRACKET

    INTEGER          shift, and go to state 75
    CLOSE_S_BRACKET  shift, and go to state 111

    INTEGER_EXPR  go to state 76


state 63

   16 ArrowType: OPEN CLOSE ARROW . ArrowType

    TAG            shift, and go to state 13
    TIMES          shift, and go to state 14
    OPEN           shift, and go to state 15
    OPEN_BRACKET   shift, and go to state 16
    BYTE           shift, and go to state 17
    INT            shift, and go to state 18
    LONG           shift, and go to state 19
    DOUBLE         shift, and go to state 20
    CHARS          shift, and go to state 21
    BOOLEAN        shift, and go to state 22
    BOX            shift, and go to state 23
    DYNAMIC        shift, and go to state 24
    QUESTION_MARK  shift, and go to state 25
    UNION          shift, and go to state 26

    ArrowType    go to state 112
    PointerType  go to state 28
    ArrayType    go to state 29
    SimpleType   go to state 30


state 64

   37 SimpleType: OPEN ArrowType CLOSE .

    $default  reduce using rule 37 (SimpleType)


state 65

   38 ArgTypeList: PointerType COMMA . ArgTypeList
   39            | PointerType COMMA . PointerType

    TAG            shift, and go to state 13
    TIMES          shift, and go to state 14
    OPEN           shift, and go to state 39
    OPEN_BRACKET   shift, and go to state 16
    BYTE           shift, and go to state 17
    INT            shift, and go to state 18
    LONG           shift, and go to state 19
    DOUBLE         shift, and go to state 20
    CHARS          shift, and go to state 21
    BOOLEAN        shift, and go to state 22
    BOX            shift, and go to state 23
    DYNAMIC        shift, and go to state 24
    QUESTION_MARK  shift, and go to state 25
    UNION          shift, and go to state 26

    PointerType  go to state 113
    ArrayType    go to state 29
    SimpleType   go to state 30
    ArgTypeList  go to state 114


state 66

   15 ArrowType: OPEN ArgTypeList CLOSE . ARROW ArrowType

    ARROW  shift, and go to state 115


state 67

   30 SimpleType: OPEN_BRACKET VarDeclarationList CLOSE_BRACKET .

    $default  reduce using rule 30 (SimpleType)


state 68

   42 VarDeclarationList: VarDeclaration COMMA . VarDeclarationList

    TAG  shift, and go to state 34

    VarDeclarationList  go to state 116
    VarDeclaration      go to state 48


state 69

   20 PointerType: BOX SimpleType OPEN_S_BRACKET . CLOSE_S_BRACKET
   23 ArrayType: SimpleType OPEN_S_BRACKET . INTEGER_EXPR CLOSE_S_BRACKET

    INTEGER          shift, and go to state 75
    CLOSE_S_BRACKET  shift, and go to state 117

    INTEGER_EXPR  go to state 76


state 70

   48 UnionDeclaration: TAG . ArrowType
   49                 | TAG .

    TAG            shift, and go to state 13
    TIMES          shift, and go to state 14
    OPEN           shift, and go to state 15
    OPEN_BRACKET   shift, and go to state 16
    BYTE           shift, and go to state 17
    INT            shift, and go to state 18
    LONG           shift, and go to state 19
    DOUBLE         shift, and go to state 20
    CHARS          shift, and go to state 21
    BOOLEAN        shift, and go to state 22
    BOX            shift, and go to state 23
    DYNAMIC        shift, and go to state 24
    QUESTION_MARK  shift, and go to state 25
    UNION          shift, and go to state 26

    $default  reduce using rule 49 (UnionDeclaration)

    ArrowType    go to state 118
    PointerType  go to state 28
    ArrayType    go to state 29
    SimpleType   go to state 30


state 71

   31 SimpleType: UNION OPEN_BRACKET UnionDeclarationList . CLOSE_BRACKET

    CLOSE_BRACKET  shift, and go to state 119


state 72

   46 UnionDeclarationList: UnionDeclaration . PIPE UnionDeclarationList
   47                     | UnionDeclaration .

    PIPE  shift, and go to state 120

    $default  reduce using rule 47 (UnionDeclarationList)


state 73

    9 Definition: DATATYPE ArrowType AS TAG . OPEN VarDeclarations CLOSE Expr WITH OPEN FunctionList CLOSE

    OPEN  shift, and go to state 121


state 74

   14 ArrowType: PointerType ARROW ArrowType .

    $default  reduce using rule 14 (ArrowType)


state 75

  121 INTEGER_EXPR: INTEGER .

    $default  reduce using rule 121 (INTEGER_EXPR)


state 76

   23 ArrayType: SimpleType OPEN_S_BRACKET INTEGER_EXPR . CLOSE_S_BRACKET

    CLOSE_S_BRACKET  shift, and go to state 122


state 77

   10 Function: FUNCTION TAG OPEN VarDeclarations . CLOSE COLON ArrowType EQUALS Expr

    CLOSE  shift, and go to state 123


state 78

   40 VarDeclarations: VarDeclarationList .

    $default  reduce using rule 40 (VarDeclarations)


state 79

   11 Function: PROTOTYPE TAG OPEN VarDeclarations . CLOSE COLON ArrowType

    CLOSE  shift, and go to state 124


state 80

    6 Definition: TYPEDEF TAG EQUALS ArrowType .

    $default  reduce using rule 6 (Definition)


state 81

   44 VarDeclaration: TAG COLON ArrowType .

    $default  reduce using rule 44 (VarDeclaration)


state 82

  120 DOUBLE_EXPR: DOUBLE_VALUE .

    $default  reduce using rule 120 (DOUBLE_EXPR)


state 83

  100 Value: TAG . OPEN_BRACKET MapsList CLOSE_BRACKET
  101      | TAG . DOUBLE_COLON TAG OPEN_BRACKET Expr CLOSE_BRACKET
  102      | TAG . DOUBLE_COLON TAG OPEN_BRACKET OPEN_BRACKET MapsList CLOSE_BRACKET CLOSE_BRACKET
  103      | TAG . DOUBLE_COLON TAG
  105      | TAG .
  106 TAG_OR_EMPTY: TAG .

    OPEN_BRACKET  shift, and go to state 125
    DOUBLE_COLON  shift, and go to state 126

    OPEN      reduce using rule 106 (TAG_OR_EMPTY)
    $default  reduce using rule 105 (Value)


state 84

   84 Value: PLUS . Value

    DOUBLE_VALUE    shift, and go to state 82
    INTEGER         shift, and go to state 75
    TAG             shift, and go to state 83
    STRING          shift, and go to state 11
    PLUS            shift, and go to state 84
    MINUS           shift, and go to state 85
    TIMES           shift, and go to state 86
    OPEN_S_BRACKET  shift, and go to state 87
    OPEN_BRACKET    shift, and go to state 88
    ARRAY           shift, and go to state 89
    BOX             shift, and go to state 90
    UNBOX           shift, and go to state 91
    CARDINAL        shift, and go to state 97
    NEW             shift, and go to state 98
    AMPERSAND       shift, and go to state 99
    NOT             shift, and go to state 100

    $default  reduce using rule 107 (TAG_OR_EMPTY)
